--- a/README.html
+++ b/README.html
@@ -367,14 +367,14 @@ code {
 
 <body>
     <h1 id="hi-im-b3nny01-%F0%9F%91%8B">Hi I'm b3nny01 👋</h1>
-<img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/profileDesk.jpeg" width="600px">
+<img src="_readmeImgs_/profileDesk.jpeg" width="600px">
 <h2 id="about-me-%F0%9F%93%92">About me 📒</h2>
 <p style="width:600 px">
-Hi, I&apos;m a first year Computer Engineering MSc student at the University of Bologna &#x1F393;.<br>
-I have been strongly passionate about informatics since high school,nowadays I&apos;m<br>
-focusing my studies on software engineering, web development and AI &#x1F468;&#x200D;&#x1F4BB;.<br>
-In the future I would like to learn more about android and game development &#x1F47E;.<br>
-For more informations here&apos;s my <a href="https://docs.google.com/viewer?url=https://github.com/b3nny01/b3nny01/blob/main/_static_/Benenati_Alessio_CV_En.pdf" target="_blank">CV</a> &#x1F4CE;.
+Hi, I'm a first year Computer Engineering MSc student at the University of Bologna 🎓.<br/>
+I have been strongly passionate about informatics since high school,nowadays I'm<br/>
+focusing my studies on software engineering, web development and AI 👨‍💻.<br/>
+In the future I would like to learn more about android and game development 👾.<br/>
+For more informations here's my <a href="https://b3nny01.github.io/b3nny01/Benenati_Alessio_CV_En.pdf" target="_blank">CV</a> 📎.
 </p>
 <h2 id="tech-skills-%F0%9F%92%BB">Tech skills 💻</h2>
 <p align="center" style="width:600px">
@@ -383,73 +383,73 @@ For more informations here&apos;s my <a href="https://docs.google.com/viewer?url
 <tr><td colspan="2"><h3>Languages</h3></td> <td colspan="2"><h3>Frameworks</h3></td><td colspan="2"><h3>Tools</h3></td></tr>
 <tr>
     <td>
-        <h5>General<br>Purpose</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/c/c-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kotlin/kotlin-original.svg" height="40px">  
+        <h5>General<br/>Purpose</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/c/c-original.svg" height="40px"/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" height="40px"/><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kotlin/kotlin-original.svg"  height="40px"/>  
     </td>
     <td>
-        <h5>Scripting<br></h5><br>    
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px">
+        <h5>Scripting<br/></h5><br/>    
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bash/bash-original.svg" height="40px" />
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" height="40px" /><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px" />
     </td>
     <td>
-        <h5>Frontend</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jquery/jquery-plain-wordmark.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" height="40px"><br>
-         <img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/frameworks/javafx.png" height="40px">
+        <h5>Frontend</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/jquery/jquery-plain-wordmark.svg" height="40px"/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" height="40px"/><br/>
+         <img src="_readmeImgs_/frameworks/javafx.png" height="40px">
     </td>
     <td>
-        <h5>Backend</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/hibernate/hibernate-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" height="40px"><br>
-         <img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/empty.png" height="40px">
+        <h5>Backend</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/hibernate/hibernate-original.svg" height="40px" />
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" height="40px"/><br/>
+         <img src="_readmeImgs_/empty.png" height="40px">
     </td>
     <td colspan="2">
-        <h5>IDEs</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eclipse/eclipse-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dbeaver/dbeaver-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/visualstudio/visualstudio-original.svg" height="40px">  
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" height="40px">       
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nano/nano-original.svg" height="40px">
+        <h5>IDEs</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/eclipse/eclipse-original.svg" height="40px" />
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dbeaver/dbeaver-original.svg" height="40px"/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg" height="40px" /><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/visualstudio/visualstudio-original.svg" height="40px"/>  
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg" height="40px"/>       
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nano/nano-original.svg" height="40px"/>
     </td>
 </tr>
 <tr></tr>
 <tr>
     <td>
-        <h5>Web</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px">     
+        <h5>Web</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg"  height="40px" />
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg"  height="40px"/><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" height="40px" />     
     </td>
     <td>
-        <h5>Database</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mariadb/mariadb-original.svg" height="40px">
-         <img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/languages/db2.png" height="40px"><br>
-         <img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/empty.png" height="40px">   
+        <h5>Database</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mariadb/mariadb-original.svg" height="40px"/>
+         <img src="_readmeImgs_/languages/db2.png" height="40px"><br>
+         <img src="_readmeImgs_/empty.png" height="40px">   
     </td>
-    <td>
-        <h5>AI</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/numpy/numpy-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pandas/pandas-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pytorch/pytorch-original.svg" height="40px">        
+    <td >
+        <h5>AI</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/numpy/numpy-original.svg" height="40px" />
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pandas/pandas-original.svg" height="40px"/><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/pytorch/pytorch-original.svg" height="40px"/>        
     </td>
-    <td>
-        <h5>Env</h5><br> 
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/android/android-original.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/arduino/arduino-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/raspberrypi/raspberrypi-original.svg" height="40px">      
+    <td >
+        <h5>Env</h5><br/> 
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/android/android-original.svg" height="40px" />
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/arduino/arduino-original.svg" height="40px"/><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/raspberrypi/raspberrypi-original.svg" height="40px"/>      
     </td>
     <td colspan="2">
-        <h5>DevOps</h5><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" height="40px">
-         <img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/tools/github.svg" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/gradle/gradle-original.svg" height="40px"><br>
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ansible/ansible-original.svg" height="40px">
-         <img src="file:///home/alessio/hdd/Projects/b3nny01/_readmeImgs_/tools/virtualbox.png" height="40px">
-         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" height="40px">
+        <h5>DevOps</h5><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/git/git-original.svg" height="40px"/>
+         <img src="_readmeImgs_/tools/github.svg" height="40px"/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/gradle/gradle-original.svg" height="40px"/><br/>
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ansible/ansible-original.svg" height="40px"/>
+         <img src="_readmeImgs_/tools/virtualbox.png" height="40px">
+         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/docker/docker-original.svg" height="40px"/>
     </td>
 </tr>
 </table>
